--- a/tintucvablog.html
+++ b/tintucvablog.html
@@ -17,7 +17,62 @@
 </head>
 
 <body>
-  <div id="header">day la header</div>
+  <div id="header">
+    <div class="header-grid-layout">
+      <div class="imgLogo">
+        <a href=""><img src="./img/Logo React Plus-Final-04 1.png" alt="Đây là ảnh logo ReactPlus"></a>
+      </div>
+      <div class="nav">
+        <ul>
+          <li><a href=""><b>Trang chủ</b></a></li>
+          <li><a href=""><b>Giới thiệu</b></a> <img class="nav-arrow-down" src="./img/Vector.png" alt="">
+            <ul class="subnav">
+              <li><a href=""><b>Về React & ReactNative</b></a></li>
+              <li><a href=""><b>Công ty ReactPlus</b></a></li>
+            </ul>
+          </li>
+          <li><a href=""><b>Văn hóa</b></a></li>
+          <li><a href="tuyendung.html"><b>Tuyển dụng</b></a></li>
+          <li><a href=""><b>Đào tạo & Sự kiện</b></a> <img class="nav-arrow-down" src="./img/Vector.png" alt="">
+            <ul class="subnav">
+              <li><a href=""><b>Về React & ReactNative</b></a></li>
+              <li><a href=""><b>Công ty ReactPlus</b></a></li>
+            </ul>
+          </li>
+          <li><a href="chungtayvicongdong.html"><b>Vì cộng đồng</b></a></li>
+          <li><a href=""><b>Tin tức & Blog</b></a></li>
+          </li>
+        </ul>
+      </div>
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+        <ul>
+          <li><a class="active" href="#"><b>Trang chủ</b></a></li>
+          <li><a href=""><b>Giới thiệu</b></a> <img class="nav-arrow-down" src="./img/Vector.png" alt="">
+            <ul class="subnav">
+              <li><a href=""><b>Về React & ReactNative</b></a></li>
+              <li><a href=""><b>Công ty ReactPlus</b></a></li>
+            </ul>
+          </li>
+          <li><a href=""><b>Văn hóa</b></a></li>
+          <li><a href=""><b>Tuyển dụng</b></a></li>
+          <li><a href=""><b>Đào tạo & Sự kiện</b></a> <img class="nav-arrow-down" src="./img/Vector.png" alt="">
+            <ul class="subnav">
+              <li><a href=""><b>Về React & ReactNative</b></a></li>
+              <li><a href=""><b>Công ty ReactPlus</b></a></li>
+            </ul>
+          </li>
+          <li><a href=""><b>Vì cộng đồng</b></a></li>
+          <li><a href=""><b>Tin tức & Blog</b></a></li>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  
+  </div>
   <div id="wrapper">
     <div class="main-head">
       <div class="main-head-left">
@@ -122,7 +177,73 @@
     </div>
 
   </div>
-  <div id="footer"></div>
+  <div id="footer">
+    <div class="contact">
+      <div class="contact-grid-layout">
+        <div class="contact-grid-layout-content">
+          <a href=""><img src="./img/Logo React Plus-Final-04 1.png" alt="Logo"></a>
+          <p></p>
+          <p>Tầng 7, Golden Field Building,<br> 24 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</p>
+          <p></p>
+        </div>
+        <div class="contact-grid-layout-content">
+          <p><b>Cộng đồng</b></p>
+          <a href="">
+            <p>Đào tạo & Sự kiện</p>
+          </a>
+          <a href="">
+            <p>Vì cộng đồng</p>
+          </a>
+          <a href="">
+            <p>Tin tức & Blog</p>
+          </a>
+        </div>
+        <div class="contact-grid-layout-content">
+          <p><b>Công ty</b></p>
+          <a href="">
+            <p>Giới thiệu </p>
+          </a>
+          <a href="">
+            <p>Văn hoá</p>
+          </a>
+          <a href="">
+            <p>Tuyển dụng</p>
+          </a>
+        </div>
+        <div class="contact-grid-layout-content">
+          <p><b>Liên hệ</b></p>
+          <div class="contact-grid-layout-icon1">
+            <a href=""><img src="./img/call.png" alt="icon điện thoại"></a>
+            <a href="">
+              <p>0349177306</p>
+            </a>
+          </div>
+          <div class="contact-grid-layout-icon1">
+            <a href=""><img src="./img/mail.png" alt="icon email"></a>
+            <a href="">
+              <p>contact@reactplus.jp</p>
+            </a>
+          </div>
+        </div>
+        <div class="contact-grid-layout-content">
+          <p><b>Kết nối với chúng tôi</b></p>
+          <div class="contact-grid-layout-icon2">
+            <a href=""><img src="./img/Group 148.png" alt="icon facebook"></a>
+            <a href=""> <img src="./img/Group 149.png" alt="icon instagram"></a>
+            <a href=""> <img src="./img/Group 147.png" alt="icon youtube"></a>
+          </div>
+        </div>
+  
+      </div>
+      <div class="bonus">
+        <div class="line">
+          <hr>
+        </div>
+        <p>© React Plus, JSC 2021. All rights reserved.</p>
+      </div>
+  
+    </div>
+  </div>
 </body>
 
 </html>
